# satnogs-auto-scheduler

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .yapfignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  auto_scheduler_setup.py  cache.py  docker-compose.ci.yml  docker-compose.yml  env-dist  requirements.txt  satnogs_client.py  schedule_single_station.py  settings.py  setup.cfg  test_cache.py  tox.ini  utils.py  vhf.txt
auto_scheduler/: __init__.py  _version.py  cache.py  io.py  pass_predictor.py  satellite.py  satnogs_client.py  schedulers.py  settings.py  tle.py  utils.py
contrib/: generate_priorities_file.py  prio_constrains.txt
tests/: prios1.txt  prios1_trailing_newline.txt  prios_w_trailing_comment.txt  test_cache.py  test_io.py  test_pass_predictor.py  test_satnogs_client.py  test_utils.py
tests/fixtures/: pass_prediction1.toml  satellites.json  search_satellites_output.json  tles.json  tles.txt  transmitters.txt  transmitters_receivable.json  transmitters_stats.json
