[metadata]
name = satnogs-auto-scheduler
url = https://gitlab.com/librespacefoundation/satnogs/satnogs-auto-scheduler
author = SatNOGS project
author_email = dev@satnogs.org
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Ham Radio
description = SatNOGS Auto Scheduler

[options]
packages = find:
include_package_data = True
install_requires =
    # Basic
    requests
    lxml
    tqdm
    python-decouple
    # Astronomy
    satellitetle~=0.6.0
    ephem

[flake8]
max-complexity = 25
max-line-length = 100
ignore = F403,W504

[yapf]
based_on_style = pep8
column_limit = 100
