[metadata]
name = satnogs-auto-scheduler
url = https://gitlab.com/librespacefoundation/satnogs/satnogs-auto-scheduler
author = SatNOGS project
author_email = dev@satnogs.org
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Ham Radio
description = SatNOGS Auto Scheduler

[options]
packages = find:
include_package_data = True
install_requires =
    # Basic
    requests~=2.23.0
    tqdm~=4.43.0
    python-decouple~=3.3
    # Astronomy
    satellitetle~=0.7.0
    ephem~=3.7.7.1

[flake8]
max-complexity = 25
max-line-length = 100
ignore = F403,W504,W503

[yapf]
column_limit = 100

[tool:isort]
use_parentheses = True
skip_glob = .tox
line_width = 99
multi_line_output = 2

