[metadata]
name = satnogs-auto-scheduler
url = https://gitlab.com/librespacefoundation/satnogs/satnogs-auto-scheduler
author = SatNOGS project
author_email = dev@satnogs.org
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Ham Radio
description = SatNOGS Auto Scheduler

[options]
packages = find:
include_package_data = True
install_requires =
    # Basic
    requests~=2.25.1
    tqdm~=4.64.1
    python-decouple~=3.7
    # Astronomy
    satellitetle~=0.11.0
    ephem~=3.7.7.1
scripts =
    schedule_single_station.py

[options.extras_require]
dev =
    pytest~=7.2.1
    pylint~=2.16.1
    pre-commit~=3.0.4
    tomli~=2.0.1 # only needed with Python<=3.10

[flake8]
exclude = auto_scheduler/_version.py,versioneer.py,build,.tox
max-complexity = 25
max-line-length = 100
ignore = F403,W504,W503

[yapf]
column_limit = 100

[tool:isort]
skip = _version.py,versioneer.py,build,.tox
line_length = 99
multi_line_output = 2

[versioneer]
VCS = git
style = pep440
versionfile_source = auto_scheduler/_version.py
versionfile_build = auto_scheduler/_version.py
tag_prefix =
parentdir_prefix =

[pylint.MASTER]
ignore=_version.py

[pylint]
disable=
    C0111, # missing-docstring
    W1514, # unspecified-encoding
    logging-fstring-interpolation
